api/api-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mystroid-api
  labels:
    run: mystorid-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mystroid-api
  template:
    metadata:
      labels:
        run: mystroid-api
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: mystroid-pubsub-key
      containers:
        - name: mystroid-api
          image: gcr.io/mystroid/mystroid-api:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          ports:
            - containerPort: 8080
              protocol: TCP
