api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mystroid-api
  namespace: default
spec:
  selector:
    run: mystroid-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
